[package]
name = "curl-fuzzer"
version = "0.1.0"
edition = "2021"

[lib]
name = "curl_fuzzer"
path = "src/lib.rs"

[[bin]]
name = "curl-fuzzer"
path = "src/main.rs"

[dependencies]
ga-engine = { path = "../ga-engine" }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rand = "0.8"
anyhow = "1"
libc = "0.2"
ctrlc = "3"
tempfile = "3"
flate2 = "1"
