[package]
name = "ls-fuzzer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ls-fuzzer"
path = "src/main.rs"

[dependencies]
ga-engine = { path = "../ga-engine" }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
rand = "0.8"
anyhow = "1"
libc = "0.2"
tempfile = "3"
